# trajectory-gen

./: .gitignore  CMakeLists.txt  grapher.py  grapher_command.sh
include/: differentialKinematics.hpp  generator.hpp  path.hpp  point.hpp  trapezoidal.hpp
src/: differentialKinematics.cpp  generator.cpp  main.cpp  path.cpp  point.cpp  trapezoidal.cpp
